Change application runner to thread instead of virtual thread